web/namespace-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  annotations:
    argocd.argoproj.io/sync-options: PruneLast=true
    noa.re/manifest-id: bbe3b387992af0a7
