web/deployment-noa-re.yaml
# Source: noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noa-re
  labels:
    app: noa-re
  namespace: web
  annotations:
    hugo: https://github.com/nresare/noa.re
    noa.re/manifest-id: 23f46d27942495d4
spec:
  replicas: 2
  selector:
    matchLabels:
      app: noa-re
  template:
    metadata:
      labels:
        app: noa-re
    spec:
      containers:
      - env:
        - name: SERVER_PORT
          value: '8443'
        - name: SERVER_HTTP2_TLS
          value: 'true'
        - name: SERVER_HTTP2_TLS_CERT
          value: /tls/tls.crt
        - name: SERVER_HTTP2_TLS_KEY
          value: /tls/tls.key
        name: web
        image: ghcr.io/static-web-server/static-web-server:2.44
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
        volumeMounts:
        - mountPath: /public
          name: public
          readOnly: true
        - mountPath: /tls
          name: tls
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: https
            scheme: HTTPS
      volumes:
      - name: src
        emptyDir: {}
      - name: public
        emptyDir: {}
      - name: tls
        secret:
          secretName: noa-re-internal-tls
