web/service-noa-re.yaml
# Source: noa.re
apiVersion: v1
kind: Service
metadata:
  name: noa-re
  namespace: web
  annotations:
    noa.re/manifest-id: 12964901e7eeb4af
spec:
  selector:
    app: noa-re
  ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
    targetPort: https
