web/service-zq-lu.yaml
# Source: zq.lu
apiVersion: v1
kind: Service
metadata:
  name: zq-lu
  namespace: web
  annotations:
    noa.re/manifest-id: 7ed53583f9a7ee62
spec:
  selector:
    app: zq-lu
  ports:
  - name: https
    appProtocol: https
    protocol: TCP
    port: 443
    targetPort: https
