web/httproute-noa-re.yaml
# Source: noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: noa-re
  namespace: web
  annotations:
    noa.re/manifest-id: f7be7f8227c3f5e5
spec:
  parentRefs:
  - name: noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - noa.re
  - nadia.resare.com
  rules:
  - backendRefs:
    - name: noa-re
      port: 443
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
